---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input

```python
match match:
    case "test" if case != "not very loooooooooooooog condition":  # comment
        pass

match smth:
    case "test" if "any long condition" != "another long condition" and "this is a long condition":
        pass
    case test if "any long condition" != "another long condition" and "this is a looooong condition":
        pass
    case test if "any long condition" != "another long condition" and "this is a looooong condition":  # some additional comments
        pass
    case test if (True): # some comment
        pass
    case test if (False
        ): # some comment
        pass
    case test if (True  # some comment
        ):
        pass  # some comment
    case cases if (True  # some comment
                   ): # some other comment
        pass  # some comment
    case match if (True  # some comment
                   ):
        pass  # some comment

# case black_test_patma_052 (originally in the pattern_matching_complex test case)
match x:
    case [1, 0] if x := x[:0]:
        y = 1
    case [1, 0] if (x := x[:0]):
        y = 1
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -21,11 +21,17 @@
         pass
     case test if False:  # some comment
         pass
-    case test if True:  # some comment
+    case test if (
+        True  # some comment
+    ):
         pass  # some comment
-    case cases if True:  # some comment  # some other comment
+    case cases if (
+        True  # some comment
+    ):  # some other comment
         pass  # some comment
-    case match if True:  # some comment
+    case match if (
+        True  # some comment
+    ):
         pass  # some comment
 
 # case black_test_patma_052 (originally in the pattern_matching_complex test case)
```

## Ruff Output

```python
match match:
    case "test" if case != "not very loooooooooooooog condition":  # comment
        pass

match smth:
    case "test" if (
        "any long condition" != "another long condition" and "this is a long condition"
    ):
        pass
    case test if (
        "any long condition" != "another long condition"
        and "this is a looooong condition"
    ):
        pass
    case test if (
        "any long condition" != "another long condition"
        and "this is a looooong condition"
    ):  # some additional comments
        pass
    case test if True:  # some comment
        pass
    case test if False:  # some comment
        pass
    case test if (
        True  # some comment
    ):
        pass  # some comment
    case cases if (
        True  # some comment
    ):  # some other comment
        pass  # some comment
    case match if (
        True  # some comment
    ):
        pass  # some comment

# case black_test_patma_052 (originally in the pattern_matching_complex test case)
match x:
    case [1, 0] if x := x[:0]:
        y = 1
    case [1, 0] if x := x[:0]:
        y = 1
```

## Black Output

```python
match match:
    case "test" if case != "not very loooooooooooooog condition":  # comment
        pass

match smth:
    case "test" if (
        "any long condition" != "another long condition" and "this is a long condition"
    ):
        pass
    case test if (
        "any long condition" != "another long condition"
        and "this is a looooong condition"
    ):
        pass
    case test if (
        "any long condition" != "another long condition"
        and "this is a looooong condition"
    ):  # some additional comments
        pass
    case test if True:  # some comment
        pass
    case test if False:  # some comment
        pass
    case test if True:  # some comment
        pass  # some comment
    case cases if True:  # some comment  # some other comment
        pass  # some comment
    case match if True:  # some comment
        pass  # some comment

# case black_test_patma_052 (originally in the pattern_matching_complex test case)
match x:
    case [1, 0] if x := x[:0]:
        y = 1
    case [1, 0] if x := x[:0]:
        y = 1
```
